<resources>
    <string name="app_name">Transverse</string>
    <string name="page_encyclopedia">Encyclopedia</string>
    <string name="page_add_new">Add New Entry</string>
    <string name="page_statistics">Statistics</string>
    <string name="page_self_help">Self-Help</string>
    <string name="page_settings">Settings</string>
    <string name="ane_mood_header">How are you feeling?</string>
    <string name="ane_tags_header">Tags</string>
    <string name="hello_blank_fragment">UwU</string>
    <string name="SHWalk">
        Taking a walk, whether or not for exercise purposes, is useful for clearing your head and getting grounded. When we experience dysphoria, it is so easy to become fixated on certain aspects of your body that you can’t change, to the point where we don’t see anything outside that. Even a short walk around the block can break you out of that loop and remind you that there is beauty in life, and that dysphoria won’t be forever.
    </string>
    <string name="SHMeditate">
        <![CDATA[When we <strong>meditate</strong>, we learn to accept ourselves and where we are without judgment. When we are dealing with dysphoria, this may be hard because we want it to go away. Know that meditation isn’t about saying that dysphoria is okay, but rather that being aware of it without judgment makes it more manageable.
<h6></h6>
Do you want to learn how to meditate? Check out meditation apps such as Atom, Medito, and Headspace.
<h6></h6>
<strong>Grounding</strong> is also a way to stay in the moment. It is a practice of bringing yourself down from an uncomfortable emotional state. Strong sensory inputs can help you center yourself and feel more connected to your body.
Some examples include:
<ul>
<li>Chewing bitter coffee beans or tart raspberries and focusing on the flavor and sensation</li>
<li>Standing and taking a deep breath, focusing on how the solid ground feels under you </li>
<li>Making yourself aware of your surroundings by counting items in the room of one color or shape</li>
</ul>
]]>
    </string>
    <string name="SHSnuggle">
        <![CDATA[Science has proven that snuggling with your pets is a mood booster - but you didn’t need to know that to experience the comfort and calm that comes along with it. If you don’t have a furry critter of your own, a friend might have one you can visit. Local humane societies often have programs where you can volunteer to walk or play with pets. ]]>
    </string>
    <string name="SHExercise">
        <![CDATA[Exercise provides us with natural endorphins that boost our moods. It is also a distraction from feeling dysphoria. Even though it may not feel this way at the moment, your body is a good body. Exercise allows us to appreciate our bodies for things that they can do, and appreciate the efforts that our bodies give in helping us stay alive every single day.
<h6></h6>
If you don’t know what kinds of movements feel good to you, experiment! Some people enjoy jogging and weight lifting, while for others swimming, biking, and hiking may be more enjoyable. And you don’t have to exercise alone! Going with a buddy or two is not only fun but also gives you a chance to get closer.
<h6></h6>
However, for many people, exercise can worsen their eating disorders or body image, so if you fall under this category, we suggest doing another self-help method instead!
]]>
    </string>
    <string name="SHRead">
        <![CDATA[Reading is a great way to distract yourself from bad feelings. Grab an engaging book that you enjoy and focus on that for a while.]]>
    </string>
    <string name="SHMusic">
        <![CDATA[Having playlist of music for bad dysphoria days can help you get through them. Music is powerful especially when it’s hard to put words to your feelings. If you know of some artists or bands that help you feel better, it’s worth it to make a playlist of your favorite songs for times when you’re feeling especially down.]]>
    </string>
    <string name="SHTalk">
        <![CDATA[Do you have a friend you can talk to? Don’t underestimate the power of a listening ear! Talking about your feelings can help you better understand them, and help you feel like you’re not alone.
<h6></h6>
Other times it might help not to focus on the feelings but instead chat about other things. Distraction can help bring us down from a peak of emotion, and allow us perspective to feel better and manage our thoughts once the worst has passed.
<h6></h6>
Please feel free to also message us on Tumblr or Instagram if you want to talk. We are here for you. Check out these resources as well for finding an online community or friends to talk to!
]]>
    </string>
    <string name="SHHobby">
        <![CDATA[Often when we’re stuck with feelings of dysphoria, things can feel hopeless and we can feel powerless. Working on a hobby is a great way to feel like you’re in control of your surroundings and of yourself. Whether that’s practicing an instrument, writing, drawing, or crafting, you are creating something that’s important to you. It’s a gift to be able to create something, even if it’s just for yourself to enjoy.]]>
    </string>
    <string name="SHPray">
        <![CDATA[If you believe in a higher power, prayer can be a really beneficial way to relieve dysphoria. It has many benefits and can help ground you and clear your mind. Know that you are loved and that this won’t be forever.]]>
    </string>
    <string name="SHClothing">
        <![CDATA[“Comfort clothing” can mean different things to different people. For some, comfort clothing may be a big and comfortable hoodie. For others, comfort clothing may be clothes that give you a feeling of gender euphoria. When we’re feeling dysphoria, clothes can often be such a big part of that, and clothes that feel good can be a great help.]]>
    </string>
    <string name="SHBath">
       <![CDATA[<Depending on the type of dysphoria you’re feeling, taking a bath may help you feel better. It’s an especially form of self-care, because you’re worth it. To make your bath even nicer, use bath salts or a bath bomb, turn down the lights, light a few candles, and play some relaxing music.
<h6></h6>
Sometimes, you could benefit from a long bath or just a quick shower, but feel you will be distressed by seeing your body. To navigate this, try covering your bathroom mirror with a sheet or towel and bathing with the lights out. It can take some feeling around in the dark and moving a bit slower, but can be a relief for acute distress surrounding bathing time until you feel more comfortable.
]]>
    </string>
    <string name="b01">
        <![CDATA[
        Gender is an identifier in the range of masculinity and femininity as dictated by social and cultural normatives.
<h6></h6>
That’s pretty wordy - let’s break it down a bit.
<h6></h6>
Most people are raised with the assumption that gender is tied to sex - associating being male with being born with a penis and testicles, and female as being born with a vagina and ovaries. However, gender is not tied to sex, and is not as simple as being male or female. Gender is a spectrum of identities, far beyond one type of man and one type of woman. Some people are born with attributes assigned male, but are actually female. Others might be born with attributes assigned female, but their gender is actually male. Some feel they are a man and woman in one, or somewhere in between, or neither. The gender binary is not between two neat categories, but can be thought of as a gradual scale from male/masculine to female/feminine, with androgyny in the middle.
<h6></h6>
Other people don’t fit on the scale at all, but fall outside of those cultural expectations and norms entirely. People who find themselves in between masculine and feminine, or outside of them, might consider themselves nonbinary.

]]>
    </string>
    <string name="b02">
        <![CDATA[
        Most people are raised being taught that gender and sexual characteristics are inherently tied together, when in fact, gender and sex are very different things.
<h6></h6>
First, let’s debunk some myths about sex. A person’s sex refers to their first (or “primary”) and secondary sexual characteristics. Primary sexual characteristics are present at birth - in humans, the usual example given is having a testes and penis or ovaries and a vagina. Secondary characteristics usually develop during puberty, like development of breast tissue, muscle, voice changes, facial hair, and body hair.
<h6></h6>
A lowered voice, facial and body hair, high muscle mass, XX chromosomes, and high testosterone levels are usually associated with being “masculine” and “male”.
<h6></h6>
A higher voice, sparse body hair, soft skin, breast development, XY chromosomes,  menstruation, and high estrogen levels are usually associated with being “feminine” and “female”.
<h6></h6>
However, even without including transgender people, hundreds of millions of people are born and develop traits differing from what is associated with their assigned sex. Women assigned female at birth can have little to no breast tissue, high testosterone levels, XX chromosomes, lower voices, thick body hair, facial hair, and high musculature. Men assigned male at birth can have breast tissue and lactation abilities, XY chromosomes, high estrogen, low testosterone, little to no body hair or facial hair, a higher voice, and low muscle mass.
<h6></h6>
Cis men and women can have any combination of these secondary characteristics, and people are born with infinite variations on appearance and function of their genitalia. Many people are born with primary and secondary sexual characteristics that do not fit easily into being defined as a penis, a vagina, testes, ovaries, or can have different combinations. People with these traits are considered “intersex”. Intersex people can also have different balances of hormones, that can effect secondary sexual characteristics like body hair and voice.
<h6></h6>
<em>More information on being intersex here:
<a href="https://www.hrc.org/resources/understanding-the-intersex-community">https://www.hrc.org/resources/understanding-the-intersex-community</a></em>
<h6></h6>
With all of these combinations and variations, there is not one singular trait that defines what makes a man a “biological” man, or a woman a “biological” woman. Someone can be born with a penis whose sexual characteristics are, in every other way, traits of a <strong>cisgender (non transgender)</strong> woman. A person can be born with XY chromosomes who, in every other way, present traits of a cisgender man. There are infinite variations and combinations of what traits a person can be born with or develop. None of these traits, combinations, or exceptions decide what gender you identify as.
<h6></h6>
Next, let’s debunk some ideas about what gender is. In almost any culture, there are ideas about what things are considered “feminine” and “masculine” - scents, clothes, colors, hobbies, interests, professions, everything. However, none of these things are worldwide or static in any way. In America, the color blue is linked with masculinity and the color pink with femininity. But these colors don’t have genders, they are just colors. Before WWII, the color blue was actually associated with femininity, and the color pink with masculinity. Nothing about the colors have changed since then except for their opinion in popular culture and society. There is no difference between a kilt and a skirt, yet one is associated with masculinity, and the other is usually associated with femininity. There are a million examples of meaningless “gendered” items, styles, and concepts - but none of them dictate gender identity.
<h6></h6>
Your gender identity is an innate sense of self as a man, woman, or other gender. It is not dependent on any sexuality, gender expression, or biological trait.

]]>
    </string>
</resources>